# finger

./: README.md
client/: pyproject.toml
client/src/finger/: __init__.py  cli.py  client.py  config.py  render.py  resolver.py  ttl.py
docker/: .env.example  docker-compose.yml.example
docs/: client-install.md  deploying.md  protocol.md
server/: Dockerfile  entrypoint.sh
server/app/: auth_manager.py  config.py  dependencies.py  mailer.py  main.py  storage.py  ttl.py
server/app/endpoints/: auth.py  read.py  write.py
server/tests/: test_server.py
