[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finger"
version = "0.1.0"
description = "Modern finger protocol client (RFC 1288 over HTTPS)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

authors = [
    {name = "Magnus Hedemark"},
]

dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
finger = "finger.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
